test/compile_failure/27_sizeof_void.c
// EXPECT-ERRORS: 1
// EXPECT: sizeof requires a complete object type
int main() {
    return sizeof(void);
}
